--- a/edenthought/lynx/templates/lynx/profile-management.html
+++ b/edenthought/lynx/templates/lynx/profile-management.html
@@ -1,1 +1,5 @@
-<h1> Profile Management </h1>
+{% include 'lynx/base.html' %}
+
+{% block content%}
+    <h1> Profile Management </h1>
+{% endblock%}
