--- a/edenthought/lynx/templates/lynx/my-login.html
+++ b/edenthought/lynx/templates/lynx/my-login.html
@@ -1,5 +1,7 @@
-{% include 'lynx/base.html' %}
-
+{% extends 'lynx/base.html' %}
+{% block title %}
+My Login | Edenthought
+{% endblock %}
 {% block content%}
     <h1> My Login </h1>
 {% endblock%}
