--- a/edenthought/lynx/templates/lynx/profile-management.html
+++ b/edenthought/lynx/templates/lynx/profile-management.html
@@ -1,5 +1,7 @@
-{% include 'lynx/base.html' %}
-
+{% extends 'lynx/base.html' %}
+{% block title %}
+Profile Management | Edenthought
+{% endblock %}
 {% block content%}
     <h1> Profile Management </h1>
 {% endblock%}
