--- a/edenthought/lynx/templates/lynx/base.html
+++ b/edenthought/lynx/templates/lynx/base.html
@@ -3,6 +3,8 @@
 <html>
 
     <head>
+        <title>{% block title %}{% endblock %}</title>
+        <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}"/>
     </head>
 
@@ -10,4 +12,14 @@
     {% endblock%}
 
     <script src="{% static 'js/app.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+
+    crossorigin="anonymous">
+
+    </script>
 </html>
