--- a/edenthought/lynx/templates/lynx/dashboard.html
+++ b/edenthought/lynx/templates/lynx/dashboard.html
@@ -1,5 +1,7 @@
-{% include 'lynx/base.html' %}
-
+{% extends 'lynx/base.html' %}
+{% block title %}
+Dashboard | Edenthought
+{% endblock %}
 {% block content%}
     <h1> Dashboard </h1>
 {% endblock%}
