--- a/edenthought/lynx/templates/lynx/register.html
+++ b/edenthought/lynx/templates/lynx/register.html
@@ -1,5 +1,7 @@
-{% include 'lynx/base.html' %}
-
+{% extends 'lynx/base.html' %}
+{% block title %}
+Register | Edenthought
+{% endblock %}
 {% block content%}
     <h1> Register </h1>
 {% endblock%}
