Set up user registration

--- a/edenthought/lynx/templates/lynx/register.html
+++ b/edenthought/lynx/templates/lynx/register.html
@@ -4,4 +4,12 @@ Register | Edenthought
 {% endblock %}
 {% block content%}
     <h1> Register </h1>
+    <form method="POST" autocomplete="off">
+        {% csrf_token %}
+
+        {{form.as_p}}
+
+        <input type="submit" value="Submit"/>
+
+    </form>
 {% endblock%}
