Complete user registration

--- a/edenthought/lynx/templates/lynx/index.html
+++ b/edenthought/lynx/templates/lynx/index.html
@@ -38,7 +38,7 @@ Homepage | Edenthought
 
               <li class="nav-item">
 
-                <a class="btn btn-primary navbar-btn" type="button"  href="">Register</a>
+                <a class="btn btn-primary navbar-btn" type="button"  href="{% url 'register' %}">Register</a>
 
               </li>
 
@@ -48,7 +48,7 @@ Homepage | Edenthought
 
               <li class="nav-item">
 
-                <a class="btn btn-primary navbar-btn" type="button"  href="">Login</a>
+                <a class="btn btn-primary navbar-btn" type="button"  href="{% url 'my-login' %}">Login</a>
 
               </li>
 
@@ -80,7 +80,7 @@ Homepage | Edenthought
           <br>
 
 
-          <a class="btn btn-outline-primary" type="button"  href="">Register</a>
+          <a class="btn btn-outline-primary" type="button"  href="{% url 'register' %}">Register</a>
 
 
         </div>
