Set up user authentication

--- a/edenthought/lynx/templates/lynx/my-login.html
+++ b/edenthought/lynx/templates/lynx/my-login.html
@@ -1,7 +1,23 @@
 {% extends 'lynx/base.html' %}
-{% block title %}
-My Login | Edenthought
-{% endblock %}
+
+{% load crispy_forms_tags %}
+
+{% block title %}My Login | Edenthought{% endblock %}
+
 {% block content%}
-    <h1> My Login </h1>
+    <br>
+    <div class="container bg-white shadow-md p-5 form-layout">
+        <h1> My Login </h1>
+        <br>
+        <form method="POST" autocomplete="off">
+            {% csrf_token %}
+            {{form.username|as_crispy_field}}
+            <br>
+            {{form.password|as_crispy_field}}
+            <br>
+            <input class="btn btn-primary" type="submit" value="Submit"/>
+            <br>
+        </form>
+    </div>
+
 {% endblock%}
