--- a/edenthought/lynx/templates/lynx/dashboard.html
+++ b/edenthought/lynx/templates/lynx/dashboard.html
@@ -1,8 +1,14 @@
 {% extends 'lynx/base.html' %}
-{% block title %}
-Dashboard | Edenthought
-{% endblock %}
+
+{% block title %}Dashboard | Edenthought{% endblock %}
+
 {% block content%}
-    <h1> Dashboard </h1>
+    <br>
+    <div class="container bg-white shadow-md p-5 form-layout">
+        <h1> Dashboard </h1>
+        <hr>
+
+        <a href="{% url 'user-logout' %}"> Logout </a>
+    </div>
 {% endblock%}
 
