--- a/edenthought/lynx/templates/lynx/dashboard.html
+++ b/edenthought/lynx/templates/lynx/dashboard.html
@@ -9,6 +9,8 @@
         <hr>
 
         <a href="{% url 'user-logout' %}"> Logout </a>
+        <br><br>
+        <a href="{% url 'profile-management'%}"> Profile management </a>
     </div>
 {% endblock%}
 
