Upload and render profile picture file

--- a/edenthought/lynx/templates/lynx/dashboard.html
+++ b/edenthought/lynx/templates/lynx/dashboard.html
@@ -7,7 +7,10 @@
     <div class="container bg-white shadow-md p-5 form-layout">
         <h1> Dashboard </h1>
         <hr>
-
+        Welcome, {{user}}!
+        <br><br>
+        <img style="width: 100px;" src={{profilePic.profile_pic.url}}/>
+        <br><br>
         <a href="{% url 'user-logout' %}"> Logout </a>
         <br><br>
         <a href="{% url 'profile-management'%}"> Profile management </a>
