--- a/edenthought/lynx/templates/lynx/profile-management.html
+++ b/edenthought/lynx/templates/lynx/profile-management.html
@@ -21,6 +21,21 @@
     </div>
     <br>
     <div class="container bg-white shadow-md p-5 form-layout">
+        <h3>Upload your profile picture </h3>
+        <hr>
+        <br>
+        <form method="POST" autocomplete="off" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{profile_form.profile_pic|as_crispy_field}}
+            <br><br>
+            <input class="btn btn-primary" type="submit" value="Upload"/>
+
+        </form>
+
+    </div>
+
+    <br>
+    <div class="container bg-white shadow-md p-5 form-layout">
         <a href="{% url 'delete-account' %}"> Delete account </a>
     </div>
 {% endblock%}
