--- a/edenthought/lynx/templates/lynx/base.html
+++ b/edenthought/lynx/templates/lynx/base.html
@@ -8,6 +8,14 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}"/>
     </head>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+
+        <a class="navbar-brand main-heading" href="{% url '' %}">
+
+          &nbsp; Edenthought
+
+        </a>
+    </nav>
     {% block content%}
     {% endblock%}
 
