--- a/edenthought/lynx/templates/lynx/my-login.html
+++ b/edenthought/lynx/templates/lynx/my-login.html
@@ -15,9 +15,12 @@
             <br>
             {{form.password|as_crispy_field}}
             <br>
-            <input class="btn btn-primary" type="submit" value="Submit"/>
+            <input class="btn btn-primary w-100" type="submit" value="Login"/>
             <br>
         </form>
+        <br>
+        <p>Don't have an account? </p> <a href="{% url 'register'%}"> <br> Create my account</a>
     </div>
+    <br>
 
 {% endblock%}
