--- a/edenthought/lynx/templates/lynx/register.html
+++ b/edenthought/lynx/templates/lynx/register.html
@@ -9,6 +9,7 @@ Register | Edenthought
     <br>
     <div class="container bg-white shadow-md p-5 form-layout">
         <h1> Register </h1>
+        <hr>
         <form method="POST" autocomplete="off">
             {% csrf_token %}
 
@@ -28,9 +29,11 @@ Register | Edenthought
 
             <br>
 
-            <input class="btn btn-primary" type="submit" value="Submit"/>
+            <input class="btn btn-primary w-100" type="submit" value="Create my account"/>
 
         </form>
+        <br>
+        <p>Already have an account? </p> <a href="{% url 'my-login'%}"> <br> Login to my account</a>
     </div>
     <br>
 {% endblock%}
